--- a/css/style.css
+++ b/css/style.css
@@ -87,8 +87,8 @@ body {
   bottom: 10%;
 }
 .arrow {
-  padding-left: 50px;
-  transform: rotate(90deg);
+  position: absolute;
+  background: var(--purple);
 }
 
 .link:hover {
@@ -130,6 +130,7 @@ body {
   color: var(--white);
   font-size: 1.5rem;
   z-index: 2;
+  cursor: pointer;
 }
 
 /* project */
@@ -167,8 +168,31 @@ body {
 .skill__title {
   padding-top: 50px;
   font-size: var(--title);
+  padding-bottom: 4rem;
 }
 
+.container__litle {
+  max-width: 600px;
+  margin: 0 auto;
+  height: 400px;
+}
+.skill__title-text {
+  padding-bottom: 2rem;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.progress {
+  width: 100%;
+  background-color: #ffffff;
+  border-radius: 50px;
+}
+.progress__bar {
+  width: 70%;
+  border-radius: 50px;
+  height: 20px;
+  background-color: var(--purple);
+}
 /* About */
 .about {
   background-color: black;
