--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   --purple: #682ae9;
   --white: #dbdbdb;
   --title: 3rem;
+  --padding-title: 0 3rem;
 }
 
 html {
@@ -25,6 +26,9 @@ li {
 body {
   color: #ffffff;
   font-family: "Roboto Mono", monospace;
+}
+.title {
+  padding: 3rem 0;
 }
 
 .container {
@@ -117,7 +121,7 @@ body {
   padding-bottom: 30px;
 }
 
-.main__title span {
+.purpe__span {
   color: var(--purple);
 }
 .main__text {
@@ -149,9 +153,6 @@ body {
 }
 
 .project__items {
-  overflow-y: scroll;
-  height: 70vh;
-  width: 100%;
 }
 
 .project__item {
@@ -223,7 +224,6 @@ body {
 /* CONTACT */
 
 .contact {
-  padding-top: 200px;
   background-color: black;
   height: 100vh;
 }
