--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -1,78 +1,78 @@
 body {
-	background-color: black;
-	color: $white;
-	font-family: "Roboto Mono", monospace;
+  background-color: black;
+  color: $white;
+  font-family: 'Roboto Mono', monospace;
 }
 .sticky {
-	position: fixed;
-	top: 0;
-	width: 100%
-  }
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 
 .main {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	height: 100vh;
-	width: 100%;
-	background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background-color: black;
 
-	&__inner {
-		max-width: 800px;
-		margin: 0 auto;
-	}
+  &__inner {
+    max-width: 800px;
+    margin: 0 auto;
+  }
 
-	&__title {
-		font-size: 3rem;
-		padding-bottom: 1px;
-	}
+  &__title {
+    font-size: 3rem;
+    padding-bottom: 1px;
+  }
 
-	.purpe__span {
-		color: $purple;
-	}
+  .purpe__span {
+    color: $purple;
+  }
 
-	&__text {
-		font-size: 1.5rem;
-		padding-bottom: 55px;
-	}
+  &__text {
+    font-size: 1.5rem;
+    padding-bottom: 55px;
+  }
 
-	&__btn {
-		background-color: transparent;
-		border: 3px solid $purple;
-		padding: 10px 40px;
-		border-radius: 40px;
-		font-size: 1.5rem;
-		cursor: pointer;
-		transition: .2s;
-		position: relative;
-		overflow: hidden;
-		z-index: 1;
-	}
+  &__btn {
+    background-color: transparent;
+    border: 3px solid $purple;
+    padding: 10px 40px;
+    border-radius: 40px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: 1s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
 
-	&__btn:after,
-	&__btn:before {
-		content: "";
-		position: absolute;
-		bottom: 0;
-		left: 0;
-		border-radius: 30px;
-		height: 100%
-	}
+    &:after,
+    &:before {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      border-radius: 30px;
+      height: 100%;
+    }
 
-	&__btn:after {
-		width: 100%;
-		z-index: -2;
-	}
+    &:after {
+      width: 100%;
+      z-index: -2;
+    }
 
-	&__btn:before {
-		width: 0%;
-		background-color: $purple;
-		transition: .3s;
-		z-index: -1;
-	}
+    &:before {
+      width: 0%;
+      background-color: $purple;
+      transition: 0.3s;
+      z-index: -1;
+    }
 
-	&__btn:hover {
-		background-color: #682ae9;
-	}
-
+    &:hover {
+      background-color: #682ae9;
+      color: $white;
+    }
+  }
 }
