--- a/src/scss/layout/main.scss
+++ b/src/scss/layout/main.scss
@@ -23,8 +23,19 @@ body {
   }
 
   &__title {
-    font-size: 3rem;
-    padding-bottom: 1px;
+    padding-bottom: 10px;
+    span {
+      opacity: 0;
+      font-size: 3rem;
+      transition: all 0.6s ease-out;
+      transform: translate3d(0);
+      display: inline-block;
+      &.fade {
+        opacity: 1;
+
+        transform: translate3d(50px);
+      }
+    }
   }
 
   .purpe__span {
